# github-feedback-analysis

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_QUICK_REFERENCE.md  COMPREHENSIVE_REFACTORING_ANALYSIS.md  CONTRIBUTING.md  FEEDBACK_ANALYSIS_SUMMARY.txt  GFA_FEEDBACK_ANALYSIS_REPORT.md  IMPROVEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  PROMPT_IMPROVEMENT_ANALYSIS.md  README.md  README_EN.md  README_ES.md  README_JA.md  README_ZH.md  REFACTORING_ANALYSIS.md  REFACTORING_DETAILED_ANALYSIS.md  REFACTORING_INDEX.md  REFACTORING_QUICK_SUMMARY.txt  REFACTORING_SUMMARY.txt  demo_witch.py  fix_imports.py  hosts.config.json  improved_prompts.py  pyproject.toml  test_improvements.py  test_keyring_fix.py
demo_reports/: witch_critique_demo.md
docs/: ARCHITECTURE.md  KEYRING_TROUBLESHOOTING.md  enterprise_support.md
github_feedback/: __init__.py  analytics_collector.py  analyzer.py  api_client.py  api_params.py  api_types.py  award_strategies.py  base_collector.py  christmas_theme.py  cli.py  cli_config.py  cli_data_collection.py  cli_feedback.py  cli_helpers.py  cli_metrics.py  cli_report_integration.py  cli_repos.py  cli_repository.py  cli_yearinreview.py  collector.py  collector_old.py  commit_collector.py  config.py  console.py  constants.py  exceptions.py  filters.py  game_elements.py  hybrid_analysis.py  issue_collector.py  llm.py  llm_cache.py  llm_heuristics.py  llm_metrics.py  llm_validation.py  models.py  pr_collector.py  prompts.py  reporter.py  repository_display.py  (+7 more)
scripts/: build_hangul_font.py
tests/: test_analyzer.py  test_cli.py  test_collector.py  (+8 more)
(+159 files in other folders)
