[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "github-feedback"
version = "0.1.0"
description = "Analyze GitHub repository feedback cycles and generate reports"
authors = [
  {name = "GitHub Feedback Team", email = "devnull@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=2.5",
  "requests>=2.31",
  "tomli>=2.0",
  "tomli-w>=1.0",
  "keyring>=24.0",
  "keyrings.alt>=5.0"
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
gfa = "github_feedback.cli:app"

[tool.setuptools]
packages = ["github_feedback"]

[tool.pytest.ini_options]
addopts = "-ra"
